...
import { NavigationContainer } from "@react-navigation/native";
import { createNativeStackNavigator } from "@react-navigation/native-stack";
import { Image } from "react-native";
import bell from "../assets/bell.png";
import newspaper from "../assets/newspaper.png";
import { Home } from "./screens/Home/Home";
import { Settings } from "./screens/Settings/Settings";
import { NotFound } from "./screens/NotFound";
import { LoginScreen } from "./screens/Login/Login";
import React from "react";
import { ServicesContext } from "../context/ServicesContext";
import * as SplashScreen from "expo-splash-screen";
import { RepoDetailsScreen } from "./screens/RepoDetails/RepoDetails";

const HomeTabsNavigator = createBottomTabNavigator();
...
